welcome.lessons.welcome.bat.bool1.In1020.scala.error
in1020:16: error: type mismatch;
 found   : Unit
 required: Boolean
		if ( a < 10 || a  > 20){
                ^in1020:15: error: type mismatch;
 found   : Unit
 required: Boolean
	if ( b < 10 || b  > 20){
        ^